fix: small fix on mobile devices

--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -4,6 +4,7 @@
   height: 1px;
   overflow: hidden;
   clip-path: inset(0 0 0 0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 .filter-checkbox {
